--- a/style.css
+++ b/style.css
@@ -35,22 +35,6 @@ select {
     border: 1px solid #ccc;
     border-radius: 3px;
 }
-#result {
-    font-size: 24px;
-    color: green;
-    margin-top: 20px;
-    padding: 10px;
-    border: 2px dashed green;
-}
-#designation {
-    font-size: 18px;
-    color: #333;
-    margin-top: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-}
 .back-button {
     position: absolute;
     top: 10px;
@@ -85,4 +69,15 @@ select {
     background-color: #4caf50; /* Couleur de la barre de progression */
     border-radius: 5px;
     transition: width 0.3s ease; /* Animation fluide */
+}
+
+/* Style commun pour le code article et la désignation */
+.result-style {
+    font-size: 24px;
+    color: green;
+    margin-top: 20px;
+    padding: 10px;
+    border: 2px dashed green;
+    background-color: #f9f9f9;
+    border-radius: 5px;
 }
