--- a/style.css
+++ b/style.css
@@ -156,3 +156,10 @@ select {
     font-size: 1em;
     text-shadow: 1px 1px 2px white;
 }
+
+/* Styles pour les titres de catégorie */
+.category-buttons h4 {
+    text-align: center;
+    margin-bottom: 10px;
+    color: #555;
+}
