--- a/style.css
+++ b/style.css
@@ -163,3 +163,9 @@ select {
     margin-bottom: 10px;
     color: #555;
 }
+
+.step-description {
+    font-size: 14px;
+    color: #666;
+    margin-bottom: 10px;
+}
